# apprunnertest2

./: .gitignore  Pipfile  README.md  app.py  apprunner-gunicorn.yaml  apprunner-pipenv.yaml  apprunner-pythonpath.yaml  apprunner-venv.yaml  apprunner.yaml  pyproject.toml  requirements.txt
core/: apps.py  urls.py  views.py
core/tests/: test_config.py  test_models.py  test_views.py
project/: settings.py
scripts/: start.sh
templates/: base.html  navbar.html
templates/core/: home.html
tests/: test_config.py  test_integration.py  test_startup.py
